; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/iphlpapi/extr_iphlpapi.c_loadIPHlpApi.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/iphlpapi/extr_iphlpapi.c_loadIPHlpApi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"iphlpapi.dll\00", align 1
@hLibrary = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [22 x i8] c"GetNumberOfInterfaces\00", align 1
@pGetNumberOfInterfaces = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [15 x i8] c"GetIpAddrTable\00", align 1
@pGetIpAddrTable = common dso_local global i8* null, align 8
@.str.3 = private unnamed_addr constant [11 x i8] c"GetIfEntry\00", align 1
@pGetIfEntry = common dso_local global i8* null, align 8
@.str.4 = private unnamed_addr constant [12 x i8] c"GetIfEntry2\00", align 1
@pGetIfEntry2 = common dso_local global i8* null, align 8
@.str.5 = private unnamed_addr constant [19 x i8] c"GetFriendlyIfIndex\00", align 1
@pGetFriendlyIfIndex = common dso_local global i8* null, align 8
@.str.6 = private unnamed_addr constant [11 x i8] c"GetIfTable\00", align 1
@pGetIfTable = common dso_local global i8* null, align 8
@.str.7 = private unnamed_addr constant [12 x i8] c"GetIfTable2\00", align 1
@pGetIfTable2 = common dso_local global i8* null, align 8
@.str.8 = private unnamed_addr constant [18 x i8] c"GetIpForwardTable\00", align 1
@pGetIpForwardTable = common dso_local global i8* null, align 8
@.str.9 = private unnamed_addr constant [14 x i8] c"GetIpNetTable\00", align 1
@pGetIpNetTable = common dso_local global i8* null, align 8
@.str.10 = private unnamed_addr constant [17 x i8] c"GetInterfaceInfo\00", align 1
@pGetInterfaceInfo = common dso_local global i8* null, align 8
@.str.11 = private unnamed_addr constant [16 x i8] c"GetAdaptersInfo\00", align 1
@pGetAdaptersInfo = common dso_local global i8* null, align 8
@.str.12 = private unnamed_addr constant [17 x i8] c"GetNetworkParams\00", align 1
@pGetNetworkParams = common dso_local global i8* null, align 8
@.str.13 = private unnamed_addr constant [18 x i8] c"GetIcmpStatistics\00", align 1
@pGetIcmpStatistics = common dso_local global i8* null, align 8
@.str.14 = private unnamed_addr constant [16 x i8] c"GetIpStatistics\00", align 1
@pGetIpStatistics = common dso_local global i8* null, align 8
@.str.15 = private unnamed_addr constant [17 x i8] c"GetTcpStatistics\00", align 1
@pGetTcpStatistics = common dso_local global i8* null, align 8
@.str.16 = private unnamed_addr constant [17 x i8] c"GetUdpStatistics\00", align 1
@pGetUdpStatistics = common dso_local global i8* null, align 8
@.str.17 = private unnamed_addr constant [20 x i8] c"GetIcmpStatisticsEx\00", align 1
@pGetIcmpStatisticsEx = common dso_local global i8* null, align 8
@.str.18 = private unnamed_addr constant [18 x i8] c"GetIpStatisticsEx\00", align 1
@pGetIpStatisticsEx = common dso_local global i8* null, align 8
@.str.19 = private unnamed_addr constant [19 x i8] c"GetTcpStatisticsEx\00", align 1
@pGetTcpStatisticsEx = common dso_local global i8* null, align 8
@.str.20 = private unnamed_addr constant [19 x i8] c"GetUdpStatisticsEx\00", align 1
@pGetUdpStatisticsEx = common dso_local global i8* null, align 8
@.str.21 = private unnamed_addr constant [12 x i8] c"GetTcpTable\00", align 1
@pGetTcpTable = common dso_local global i8* null, align 8
@.str.22 = private unnamed_addr constant [12 x i8] c"GetUdpTable\00", align 1
@pGetUdpTable = common dso_local global i8* null, align 8
@.str.23 = private unnamed_addr constant [18 x i8] c"GetPerAdapterInfo\00", align 1
@pGetPerAdapterInfo = common dso_local global i8* null, align 8
@.str.24 = private unnamed_addr constant [21 x i8] c"GetAdaptersAddresses\00", align 1
@pGetAdaptersAddresses = common dso_local global i8* null, align 8
@.str.25 = private unnamed_addr constant [17 x i8] c"NotifyAddrChange\00", align 1
@pNotifyAddrChange = common dso_local global i8* null, align 8
@.str.26 = private unnamed_addr constant [21 x i8] c"CancelIPChangeNotify\00", align 1
@pCancelIPChangeNotify = common dso_local global i8* null, align 8
@.str.27 = private unnamed_addr constant [20 x i8] c"GetExtendedTcpTable\00", align 1
@pGetExtendedTcpTable = common dso_local global i8* null, align 8
@.str.28 = private unnamed_addr constant [20 x i8] c"GetExtendedUdpTable\00", align 1
@pGetExtendedUdpTable = common dso_local global i8* null, align 8
@.str.29 = private unnamed_addr constant [12 x i8] c"SetTcpEntry\00", align 1
@pSetTcpEntry = common dso_local global i8* null, align 8
@.str.30 = private unnamed_addr constant [15 x i8] c"IcmpCreateFile\00", align 1
@pIcmpCreateFile = common dso_local global i8* null, align 8
@.str.31 = private unnamed_addr constant [13 x i8] c"IcmpSendEcho\00", align 1
@pIcmpSendEcho = common dso_local global i8* null, align 8
@.str.32 = private unnamed_addr constant [25 x i8] c"CreateSortedAddressPairs\00", align 1
@pCreateSortedAddressPairs = common dso_local global i8* null, align 8
@.str.33 = private unnamed_addr constant [13 x i8] c"FreeMibTable\00", align 1
@pFreeMibTable = common dso_local global i8* null, align 8
@.str.34 = private unnamed_addr constant [27 x i8] c"ConvertInterfaceGuidToLuid\00", align 1
@pConvertInterfaceGuidToLuid = common dso_local global i8* null, align 8
@.str.35 = private unnamed_addr constant [28 x i8] c"ConvertInterfaceIndexToLuid\00", align 1
@pConvertInterfaceIndexToLuid = common dso_local global i8* null, align 8
@.str.36 = private unnamed_addr constant [27 x i8] c"ConvertInterfaceLuidToGuid\00", align 1
@pConvertInterfaceLuidToGuid = common dso_local global i8* null, align 8
@.str.37 = private unnamed_addr constant [28 x i8] c"ConvertInterfaceLuidToIndex\00", align 1
@pConvertInterfaceLuidToIndex = common dso_local global i8* null, align 8
@.str.38 = private unnamed_addr constant [28 x i8] c"ConvertInterfaceLuidToNameA\00", align 1
@pConvertInterfaceLuidToNameA = common dso_local global i8* null, align 8
@.str.39 = private unnamed_addr constant [28 x i8] c"ConvertInterfaceLuidToNameW\00", align 1
@pConvertInterfaceLuidToNameW = common dso_local global i8* null, align 8
@.str.40 = private unnamed_addr constant [28 x i8] c"ConvertInterfaceNameToLuidA\00", align 1
@pConvertInterfaceNameToLuidA = common dso_local global i8* null, align 8
@.str.41 = private unnamed_addr constant [28 x i8] c"ConvertInterfaceNameToLuidW\00", align 1
@pConvertInterfaceNameToLuidW = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @loadIPHlpApi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @loadIPHlpApi() #0 {
  %1 = call i64 @LoadLibraryA(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i64 %1, i64* @hLibrary, align 8
  %2 = load i64, i64* @hLibrary, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %128

4:                                                ; preds = %0
  %5 = load i64, i64* @hLibrary, align 8
  %6 = call i64 @GetProcAddress(i64 %5, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %7 = inttoptr i64 %6 to i8*
  store i8* %7, i8** @pGetNumberOfInterfaces, align 8
  %8 = load i64, i64* @hLibrary, align 8
  %9 = call i64 @GetProcAddress(i64 %8, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %10 = inttoptr i64 %9 to i8*
  store i8* %10, i8** @pGetIpAddrTable, align 8
  %11 = load i64, i64* @hLibrary, align 8
  %12 = call i64 @GetProcAddress(i64 %11, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  %13 = inttoptr i64 %12 to i8*
  store i8* %13, i8** @pGetIfEntry, align 8
  %14 = load i64, i64* @hLibrary, align 8
  %15 = call i64 @GetProcAddress(i64 %14, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  %16 = inttoptr i64 %15 to i8*
  store i8* %16, i8** @pGetIfEntry2, align 8
  %17 = load i64, i64* @hLibrary, align 8
  %18 = call i64 @GetProcAddress(i64 %17, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0))
  %19 = inttoptr i64 %18 to i8*
  store i8* %19, i8** @pGetFriendlyIfIndex, align 8
  %20 = load i64, i64* @hLibrary, align 8
  %21 = call i64 @GetProcAddress(i64 %20, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.6, i64 0, i64 0))
  %22 = inttoptr i64 %21 to i8*
  store i8* %22, i8** @pGetIfTable, align 8
  %23 = load i64, i64* @hLibrary, align 8
  %24 = call i64 @GetProcAddress(i64 %23, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.7, i64 0, i64 0))
  %25 = inttoptr i64 %24 to i8*
  store i8* %25, i8** @pGetIfTable2, align 8
  %26 = load i64, i64* @hLibrary, align 8
  %27 = call i64 @GetProcAddress(i64 %26, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.8, i64 0, i64 0))
  %28 = inttoptr i64 %27 to i8*
  store i8* %28, i8** @pGetIpForwardTable, align 8
  %29 = load i64, i64* @hLibrary, align 8
  %30 = call i64 @GetProcAddress(i64 %29, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.9, i64 0, i64 0))
  %31 = inttoptr i64 %30 to i8*
  store i8* %31, i8** @pGetIpNetTable, align 8
  %32 = load i64, i64* @hLibrary, align 8
  %33 = call i64 @GetProcAddress(i64 %32, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.10, i64 0, i64 0))
  %34 = inttoptr i64 %33 to i8*
  store i8* %34, i8** @pGetInterfaceInfo, align 8
  %35 = load i64, i64* @hLibrary, align 8
  %36 = call i64 @GetProcAddress(i64 %35, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.11, i64 0, i64 0))
  %37 = inttoptr i64 %36 to i8*
  store i8* %37, i8** @pGetAdaptersInfo, align 8
  %38 = load i64, i64* @hLibrary, align 8
  %39 = call i64 @GetProcAddress(i64 %38, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.12, i64 0, i64 0))
  %40 = inttoptr i64 %39 to i8*
  store i8* %40, i8** @pGetNetworkParams, align 8
  %41 = load i64, i64* @hLibrary, align 8
  %42 = call i64 @GetProcAddress(i64 %41, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.13, i64 0, i64 0))
  %43 = inttoptr i64 %42 to i8*
  store i8* %43, i8** @pGetIcmpStatistics, align 8
  %44 = load i64, i64* @hLibrary, align 8
  %45 = call i64 @GetProcAddress(i64 %44, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.14, i64 0, i64 0))
  %46 = inttoptr i64 %45 to i8*
  store i8* %46, i8** @pGetIpStatistics, align 8
  %47 = load i64, i64* @hLibrary, align 8
  %48 = call i64 @GetProcAddress(i64 %47, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.15, i64 0, i64 0))
  %49 = inttoptr i64 %48 to i8*
  store i8* %49, i8** @pGetTcpStatistics, align 8
  %50 = load i64, i64* @hLibrary, align 8
  %51 = call i64 @GetProcAddress(i64 %50, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.16, i64 0, i64 0))
  %52 = inttoptr i64 %51 to i8*
  store i8* %52, i8** @pGetUdpStatistics, align 8
  %53 = load i64, i64* @hLibrary, align 8
  %54 = call i64 @GetProcAddress(i64 %53, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.17, i64 0, i64 0))
  %55 = inttoptr i64 %54 to i8*
  store i8* %55, i8** @pGetIcmpStatisticsEx, align 8
  %56 = load i64, i64* @hLibrary, align 8
  %57 = call i64 @GetProcAddress(i64 %56, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.18, i64 0, i64 0))
  %58 = inttoptr i64 %57 to i8*
  store i8* %58, i8** @pGetIpStatisticsEx, align 8
  %59 = load i64, i64* @hLibrary, align 8
  %60 = call i64 @GetProcAddress(i64 %59, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.19, i64 0, i64 0))
  %61 = inttoptr i64 %60 to i8*
  store i8* %61, i8** @pGetTcpStatisticsEx, align 8
  %62 = load i64, i64* @hLibrary, align 8
  %63 = call i64 @GetProcAddress(i64 %62, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.20, i64 0, i64 0))
  %64 = inttoptr i64 %63 to i8*
  store i8* %64, i8** @pGetUdpStatisticsEx, align 8
  %65 = load i64, i64* @hLibrary, align 8
  %66 = call i64 @GetProcAddress(i64 %65, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.21, i64 0, i64 0))
  %67 = inttoptr i64 %66 to i8*
  store i8* %67, i8** @pGetTcpTable, align 8
  %68 = load i64, i64* @hLibrary, align 8
  %69 = call i64 @GetProcAddress(i64 %68, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.22, i64 0, i64 0))
  %70 = inttoptr i64 %69 to i8*
  store i8* %70, i8** @pGetUdpTable, align 8
  %71 = load i64, i64* @hLibrary, align 8
  %72 = call i64 @GetProcAddress(i64 %71, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.23, i64 0, i64 0))
  %73 = inttoptr i64 %72 to i8*
  store i8* %73, i8** @pGetPerAdapterInfo, align 8
  %74 = load i64, i64* @hLibrary, align 8
  %75 = call i64 @GetProcAddress(i64 %74, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.24, i64 0, i64 0))
  %76 = inttoptr i64 %75 to i8*
  store i8* %76, i8** @pGetAdaptersAddresses, align 8
  %77 = load i64, i64* @hLibrary, align 8
  %78 = call i64 @GetProcAddress(i64 %77, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.25, i64 0, i64 0))
  %79 = inttoptr i64 %78 to i8*
  store i8* %79, i8** @pNotifyAddrChange, align 8
  %80 = load i64, i64* @hLibrary, align 8
  %81 = call i64 @GetProcAddress(i64 %80, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.26, i64 0, i64 0))
  %82 = inttoptr i64 %81 to i8*
  store i8* %82, i8** @pCancelIPChangeNotify, align 8
  %83 = load i64, i64* @hLibrary, align 8
  %84 = call i64 @GetProcAddress(i64 %83, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.27, i64 0, i64 0))
  %85 = inttoptr i64 %84 to i8*
  store i8* %85, i8** @pGetExtendedTcpTable, align 8
  %86 = load i64, i64* @hLibrary, align 8
  %87 = call i64 @GetProcAddress(i64 %86, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.28, i64 0, i64 0))
  %88 = inttoptr i64 %87 to i8*
  store i8* %88, i8** @pGetExtendedUdpTable, align 8
  %89 = load i64, i64* @hLibrary, align 8
  %90 = call i64 @GetProcAddress(i64 %89, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.29, i64 0, i64 0))
  %91 = inttoptr i64 %90 to i8*
  store i8* %91, i8** @pSetTcpEntry, align 8
  %92 = load i64, i64* @hLibrary, align 8
  %93 = call i64 @GetProcAddress(i64 %92, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.30, i64 0, i64 0))
  %94 = inttoptr i64 %93 to i8*
  store i8* %94, i8** @pIcmpCreateFile, align 8
  %95 = load i64, i64* @hLibrary, align 8
  %96 = call i64 @GetProcAddress(i64 %95, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.31, i64 0, i64 0))
  %97 = inttoptr i64 %96 to i8*
  store i8* %97, i8** @pIcmpSendEcho, align 8
  %98 = load i64, i64* @hLibrary, align 8
  %99 = call i64 @GetProcAddress(i64 %98, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.32, i64 0, i64 0))
  %100 = inttoptr i64 %99 to i8*
  store i8* %100, i8** @pCreateSortedAddressPairs, align 8
  %101 = load i64, i64* @hLibrary, align 8
  %102 = call i64 @GetProcAddress(i64 %101, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.33, i64 0, i64 0))
  %103 = inttoptr i64 %102 to i8*
  store i8* %103, i8** @pFreeMibTable, align 8
  %104 = load i64, i64* @hLibrary, align 8
  %105 = call i64 @GetProcAddress(i64 %104, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.34, i64 0, i64 0))
  %106 = inttoptr i64 %105 to i8*
  store i8* %106, i8** @pConvertInterfaceGuidToLuid, align 8
  %107 = load i64, i64* @hLibrary, align 8
  %108 = call i64 @GetProcAddress(i64 %107, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.35, i64 0, i64 0))
  %109 = inttoptr i64 %108 to i8*
  store i8* %109, i8** @pConvertInterfaceIndexToLuid, align 8
  %110 = load i64, i64* @hLibrary, align 8
  %111 = call i64 @GetProcAddress(i64 %110, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.36, i64 0, i64 0))
  %112 = inttoptr i64 %111 to i8*
  store i8* %112, i8** @pConvertInterfaceLuidToGuid, align 8
  %113 = load i64, i64* @hLibrary, align 8
  %114 = call i64 @GetProcAddress(i64 %113, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.37, i64 0, i64 0))
  %115 = inttoptr i64 %114 to i8*
  store i8* %115, i8** @pConvertInterfaceLuidToIndex, align 8
  %116 = load i64, i64* @hLibrary, align 8
  %117 = call i64 @GetProcAddress(i64 %116, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.38, i64 0, i64 0))
  %118 = inttoptr i64 %117 to i8*
  store i8* %118, i8** @pConvertInterfaceLuidToNameA, align 8
  %119 = load i64, i64* @hLibrary, align 8
  %120 = call i64 @GetProcAddress(i64 %119, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.39, i64 0, i64 0))
  %121 = inttoptr i64 %120 to i8*
  store i8* %121, i8** @pConvertInterfaceLuidToNameW, align 8
  %122 = load i64, i64* @hLibrary, align 8
  %123 = call i64 @GetProcAddress(i64 %122, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.40, i64 0, i64 0))
  %124 = inttoptr i64 %123 to i8*
  store i8* %124, i8** @pConvertInterfaceNameToLuidA, align 8
  %125 = load i64, i64* @hLibrary, align 8
  %126 = call i64 @GetProcAddress(i64 %125, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.41, i64 0, i64 0))
  %127 = inttoptr i64 %126 to i8*
  store i8* %127, i8** @pConvertInterfaceNameToLuidW, align 8
  br label %128

128:                                              ; preds = %4, %0
  ret void
}

declare dso_local i64 @LoadLibraryA(i8*) #1

declare dso_local i64 @GetProcAddress(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
